# whats-that-sound

./: .gitignore  Makefile  Procfile  README.md  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/__tests__/: App.overrides.test.tsx  (+1 more)
src/: __init__.py  cli.py  inference.py  jobs.py  metadata.py  models.py  organizer.py  server.py  ui.py  worker.py
src/analyzers/: __init__.py  directory_analyzer.py  structure_classifier.py
src/generators/: __init__.py  proposal_generator.py
src/jobs/: __init__.py  migrations.py  models.py  scanner.py
src/organizers/: __init__.py  file_organizer.py
src/processors/: __init__.py  album_processor.py  background_processor.py  collection_processor.py
src/trackers/: __init__.py  progress_tracker.py  state_manager.py
tests/: __init__.py  conftest.py  test_cli.py  test_inference_provider.py  test_integration.py  test_jobs_states.py  test_metadata.py  test_models.py  test_organizer.py  test_organizer_refactored.py  test_startup_prefetch.py  test_structure_classifier.py  test_structure_from_fixtures.py  test_ui.py
tests/analyzers/: __init__.py  test_directory_analyzer.py  test_structure_classifier.py
tests/generators/: __init__.py  test_json_parsing_fix.py  test_proposal_generator_integration.py
tests/jobs/: test_jobstore.py  test_scanner_multidisc_mixed.py
tests/processors/: __init__.py  test_processors_integration.py
tests/ui/: test_dashboard.py  test_presenter.py
(+11 files in other folders)
