[project]
name = "whats-that-sound"
version = "0.1.0"
description = "Organize music collections using local LLMs"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "mutagen>=1.47",
    "huggingface-hub>=0.20",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "websockets>=12.0",
    "pytest>=8.4.2",
    "watchfiles>=0.22",
    "honcho>=2.0.0",
    "tenacity>=9.1.2",
    "ipython>=8.18.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "black>=23.0",
    "honcho>=1.1.0",
]
cuda = [
    "llama-cpp-python>=0.2.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
wts-worker = "src.worker:_main"
